[package]
name = "coba_warp"
version = "0.1.0"
authors = ["syariefa <syareeefa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
